fix layout overflow

--- a/src/style.scss
+++ b/src/style.scss
@@ -216,7 +216,7 @@ $theme-color: #b4a6f2;
       }
     }
     .quick-scroll {
-      position: sticky;
+      position: fixed;
       bottom: 205px;
       right: 0px;
       height: 0px;
